refs #8 fix use align-items

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -27,8 +27,8 @@
 	}
 
 	&-php-code-header-wrapper {
+		align-items: center;
 		display: flex;
-		justify-content: flex-end;
 	}
 
 	&-copy {
